Newest Jira 8.4.2