@@ -12,7 +12,12 @@ JVM_SUPPORT_RECOMMENDED_ARGS=""
 # The following 2 settings control the minimum and maximum given to the JIRA Java virtual machine.  In larger JIRA instances, the maximum amount will need to be increased.
 #
 #JVM_MINIMUM_MEMORY="384m"
-#JVM_MAXIMUM_MEMORY="768m"
+#JVM_MAXIMUM_MEMORY="2048m"
+
+#
+# The following setting configures the size of JVM code cache.  A high value of reserved size allows Jira to work with more installed apps.
+#
+JVM_CODE_CACHE_ARGS='-XX:InitialCodeCacheSize=32m -XX:ReservedCodeCacheSize=512m'
 
 #
 # The following are the required arguments for JIRA.
@@ -34,7 +39,7 @@ JVM_REQUIRED_ARGS='-Djava.awt.headless=true -Datlassian.standalone=JIRA -Dorg.ap
 # Prevents the JVM from suppressing stack traces if a given type of exception
 # occurs frequently, which could make it harder for support to diagnose a problem.
 #-----------------------------------------------------------------------------------
-JVM_EXTRA_ARGS="-XX:-OmitStackTraceInFastThrow"
+JVM_EXTRA_ARGS="-XX:-OmitStackTraceInFastThrow -Djava.locale.providers=COMPAT"
 
 PRGDIR=`dirname "$0"`
 cat "${PRGDIR}"/jirabanner.txt
@@ -43,16 +48,16 @@ JIRA_HOME_MINUSD=""
 if [ "$JIRA_HOME" != "" ]; then
     echo $JIRA_HOME | grep -q " "
     if [ $? -eq 0 ]; then
-	    echo ""
-	    echo "--------------------------------------------------------------------------------------------------------------------"
-		echo "   WARNING : You cannot have a JIRA_HOME environment variable set with spaces in it.  This variable is being ignored"
-	    echo "--------------------------------------------------------------------------------------------------------------------"
+            echo ""
+            echo "--------------------------------------------------------------------------------------------------------------------"
+                echo "   WARNING : You cannot have a JIRA_HOME environment variable set with spaces in it.  This variable is being ignored"
+            echo "--------------------------------------------------------------------------------------------------------------------"
     else
-		JIRA_HOME_MINUSD=-Djira.home=$JIRA_HOME
+                JIRA_HOME_MINUSD=-Djira.home=$JIRA_HOME
     fi
 fi
 
-JAVA_OPTS="-Xms${JVM_MINIMUM_MEMORY} -Xmx${JVM_MAXIMUM_MEMORY} ${JAVA_OPTS} ${JVM_REQUIRED_ARGS} ${DISABLE_NOTIFICATIONS} ${JVM_SUPPORT_RECOMMENDED_ARGS} ${JVM_EXTRA_ARGS} ${JIRA_HOME_MINUSD} ${START_JIRA_JAVA_OPTS}"
+JAVA_OPTS="-Xms${JVM_MINIMUM_MEMORY} -Xmx${JVM_MAXIMUM_MEMORY} ${JVM_CODE_CACHE_ARGS} ${JAVA_OPTS} ${JVM_REQUIRED_ARGS} ${DISABLE_NOTIFICATIONS} ${JVM_SUPPORT_RECOMMENDED_ARGS} ${JVM_EXTRA_ARGS} ${JIRA_HOME_MINUSD} ${START_JIRA_JAVA_OPTS}"
 
 export JAVA_OPTS
 
@@ -60,7 +65,7 @@ export JAVA_OPTS
 JAVA_HOME="/opt/atlassian/jira/jre/"; export JAVA_HOME
 
 echo ""
-echo "If you encounter issues starting or stopping JIRA, please see the Troubleshooting guide at http://confluence.atlassian.com/display/JIRA/Installation+Troubleshooting+Guide"
+echo "If you encounter issues starting or stopping JIRA, please see the Troubleshooting guide at https://docs.atlassian.com/jira/jadm-docs-084/Troubleshooting+installation"
 echo ""
 if [ "$JIRA_HOME_MINUSD" != "" ]; then
     echo "Using JIRA_HOME:       $JIRA_HOME"
@@ -98,16 +103,3 @@ cd $PUSHED_DIR
 echo ""
 echo "Server startup logs are located in $LOGBASEABS/logs/catalina.out"
 
-# Set the JVM arguments used to start JIRA. For a description of the options, see
-# http://www.oracle.com/technetwork/java/javase/tech/vmoptions-jsp-140102.html
-
-#-----------------------------------------------------------------------------------
-# This allows us to actually debug GC related issues by correlating timestamps
-# with other parts of the application logs.
-#-----------------------------------------------------------------------------------
-GC_JVM_PARAMETERS=""
-GC_JVM_PARAMETERS="-XX:+PrintGCDetails -XX:+PrintGCDateStamps -XX:+PrintGCTimeStamps -XX:+PrintGCCause ${GC_JVM_PARAMETERS}"
-GC_JVM_PARAMETERS="-Xloggc:$LOGBASEABS/logs/atlassian-jira-gc-%t.log -XX:+UseGCLogFileRotation -XX:NumberOfGCLogFiles=5 -XX:GCLogFileSize=20M ${GC_JVM_PARAMETERS}"
-
-CATALINA_OPTS="${GC_JVM_PARAMETERS} ${CATALINA_OPTS}"
-export CATALINA_OPTS
